# zipfian-whitening-llama

./: LICENSE  README.md  pyproject.toml
scripts/: download_embedding.sh  download_word_freq.sh  run_mteb_sts.sh
src/: config.py  convert_model_to_sentence_transformers.py  download_embedding.py  run_mteb.py  utils.py
src/zipfian_whitening/: whitening.py
