[project]
name = "zipfian-whitening-llama"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fire>=0.7.0",
    "ipython>=8.32.0",
    "isort>=6.0.0",
    "mteb>=1.34.14",
    "ruff>=0.9.6",
    "sentence-transformers>=3.4.1",
    "torch>=2.6.0",
    "torchtyping>=0.1.5",
    "tqdm>=4.67.1",
    "transformers>=4.48.3",
]
